manifests/cilium/network-policy-deny-all.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Deny everything"
metadata:
  name: "ingress-egress-deny-all"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: httpbin
      app: tblshoot
  egress:
  - {}
  ingress:
  - {}
